--- a/Bitcoin3.Bench/Bitcoin3.Bench.csproj
+++ b/Bitcoin3.Bench/Bitcoin3.Bench.csproj
@@ -13,6 +13,6 @@
   </ItemGroup>
 
   <ItemGroup>
-  		<ProjectReference Include="..\NBitcoin\NBitcoin.csproj" />
+  		<ProjectReference Include="..\Bitcoin3\Bitcoin3.csproj" />
   </ItemGroup>
 </Project>
