--- a/Bitcoin3.Tests/Bitcoin3.Tests.csproj
+++ b/Bitcoin3.Tests/Bitcoin3.Tests.csproj
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<Company>Metaco SA</Company>
-		<Copyright>Copyright © Metaco SA 2017</Copyright>
+		<Company>Yggdra</Company>
+		<Copyright>Copyright © Yggdra 2019</Copyright>
 		<Description>The C# Bitcoin Library</Description>
 	</PropertyGroup>
   <PropertyGroup>
