Frank: Some config changes

--- a/BTC3site.Tests/BTC3site.Tests.csproj
+++ b/BTC3site.Tests/BTC3site.Tests.csproj
@@ -98,6 +98,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BTC3site\BTC3site.csproj">
+      <Project>{26A93F46-8E74-4B6B-8A85-C276D50308BD}</Project>
+      <Name>BTC3site</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
